--- a/cinetel/cinetelcleaning.ipynb
+++ b/cinetel/cinetelcleaning.ipynb
@@ -146,6 +146,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data manipulation\n",
+    "\n",
+    "I decided to create new columns to get information I may need later on during the analysis."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
