add dirty df1 at the top

--- a/cinetel/cinetelcleaning.ipynb
+++ b/cinetel/cinetelcleaning.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,11 +27,222 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pos.</th>\n",
+       "      <th>Titolo</th>\n",
+       "      <th>Prima Progr.</th>\n",
+       "      <th>Nazione</th>\n",
+       "      <th>Distribuzione</th>\n",
+       "      <th>Incasso</th>\n",
+       "      <th>Presenze</th>\n",
+       "      <th>Incasso al 16/11/2023</th>\n",
+       "      <th>Presenze al 16/11/2023</th>\n",
+       "      <th>2023-11-17 15:31:50.351708</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>C'E' ANCORA DOMANI</td>\n",
+       "      <td>'2023-10-26'26/10/2023</td>\n",
+       "      <td>ITA</td>\n",
+       "      <td>VISION DISTRIBUTION</td>\n",
+       "      <td>449991.06</td>\n",
+       "      <td>66700</td>\n",
+       "      <td>15231636.85</td>\n",
+       "      <td>2202169</td>\n",
+       "      <td>2023-11-17 15:31:50.351708</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>HUNGER GAMES - LA BALLATA DELL'USIGNOLO E DEL ...</td>\n",
+       "      <td>'2023-11-15'15/11/2023</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>MEDUSA FILM S.P.A.</td>\n",
+       "      <td>238466.31</td>\n",
+       "      <td>32469</td>\n",
+       "      <td>584902.45</td>\n",
+       "      <td>79311</td>\n",
+       "      <td>2023-11-17 15:31:50.351708</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>THE MARVELS</td>\n",
+       "      <td>'2023-11-08'08/11/2023</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>WALT DISNEY S.M.P. ITALIA</td>\n",
+       "      <td>60914.35</td>\n",
+       "      <td>8628</td>\n",
+       "      <td>2260142.44</td>\n",
+       "      <td>305291</td>\n",
+       "      <td>2023-11-17 15:31:50.351708</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>THANKSGIVING</td>\n",
+       "      <td>'2023-11-16'16/11/2023</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>EAGLE PICTURES S.P.A.</td>\n",
+       "      <td>41232.57</td>\n",
+       "      <td>5709</td>\n",
+       "      <td>41232.57</td>\n",
+       "      <td>5709</td>\n",
+       "      <td>2023-11-17 15:31:50.351708</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>7</td>\n",
+       "      <td>COMANDANTE</td>\n",
+       "      <td>'2023-10-31'31/10/2023</td>\n",
+       "      <td>ITA</td>\n",
+       "      <td>01 DISTRIBUTION</td>\n",
+       "      <td>19637.37</td>\n",
+       "      <td>3455</td>\n",
+       "      <td>3252914.25</td>\n",
+       "      <td>477655</td>\n",
+       "      <td>2023-11-21 10:43:31.249268</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51</th>\n",
+       "      <td>8</td>\n",
+       "      <td>IO CAPITANO</td>\n",
+       "      <td>'2023-09-07'07/09/2023</td>\n",
+       "      <td>COP</td>\n",
+       "      <td>01 DISTRIBUTION</td>\n",
+       "      <td>14251.70</td>\n",
+       "      <td>3374</td>\n",
+       "      <td>4189929.12</td>\n",
+       "      <td>726793</td>\n",
+       "      <td>2023-11-21 10:43:31.249268</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>9</td>\n",
+       "      <td>TROLLS 3 - TUTTI INSIEME (TROLLS BAND TOGETHER)</td>\n",
+       "      <td>'2023-11-09'09/11/2023</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>UNIVERSAL S.R.L.</td>\n",
+       "      <td>13974.40</td>\n",
+       "      <td>2376</td>\n",
+       "      <td>1834876.28</td>\n",
+       "      <td>270536</td>\n",
+       "      <td>2023-11-21 10:43:31.250268</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>10</td>\n",
+       "      <td>DREAM SCENARIO - HAI MAI SOGNATO QUEST'UOMO?</td>\n",
+       "      <td>'2023-11-16'16/11/2023</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>I WONDER PICTURES S.R.L.</td>\n",
+       "      <td>12969.19</td>\n",
+       "      <td>2175</td>\n",
+       "      <td>136938.61</td>\n",
+       "      <td>19876</td>\n",
+       "      <td>2023-11-21 10:43:31.250268</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>54 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Pos.                                             Titolo  \\\n",
+       "0     1                                 C'E' ANCORA DOMANI   \n",
+       "1     2  HUNGER GAMES - LA BALLATA DELL'USIGNOLO E DEL ...   \n",
+       "2     3                                        THE MARVELS   \n",
+       "3     4                                       THANKSGIVING   \n",
+       "..  ...                                                ...   \n",
+       "50    7                                         COMANDANTE   \n",
+       "51    8                                        IO CAPITANO   \n",
+       "52    9    TROLLS 3 - TUTTI INSIEME (TROLLS BAND TOGETHER)   \n",
+       "53   10       DREAM SCENARIO - HAI MAI SOGNATO QUEST'UOMO?   \n",
+       "\n",
+       "              Prima Progr. Nazione              Distribuzione    Incasso  \\\n",
+       "0   '2023-10-26'26/10/2023     ITA        VISION DISTRIBUTION  449991.06   \n",
+       "1   '2023-11-15'15/11/2023     USA         MEDUSA FILM S.P.A.  238466.31   \n",
+       "2   '2023-11-08'08/11/2023     USA  WALT DISNEY S.M.P. ITALIA   60914.35   \n",
+       "3   '2023-11-16'16/11/2023     USA      EAGLE PICTURES S.P.A.   41232.57   \n",
+       "..                     ...     ...                        ...        ...   \n",
+       "50  '2023-10-31'31/10/2023     ITA            01 DISTRIBUTION   19637.37   \n",
+       "51  '2023-09-07'07/09/2023     COP            01 DISTRIBUTION   14251.70   \n",
+       "52  '2023-11-09'09/11/2023     USA           UNIVERSAL S.R.L.   13974.40   \n",
+       "53  '2023-11-16'16/11/2023     USA   I WONDER PICTURES S.R.L.   12969.19   \n",
+       "\n",
+       "   Presenze Incasso al 16/11/2023 Presenze al 16/11/2023  \\\n",
+       "0     66700           15231636.85                2202169   \n",
+       "1     32469             584902.45                  79311   \n",
+       "2      8628            2260142.44                 305291   \n",
+       "3      5709              41232.57                   5709   \n",
+       "..      ...                   ...                    ...   \n",
+       "50     3455            3252914.25                 477655   \n",
+       "51     3374            4189929.12                 726793   \n",
+       "52     2376            1834876.28                 270536   \n",
+       "53     2175             136938.61                  19876   \n",
+       "\n",
+       "    2023-11-17 15:31:50.351708  \n",
+       "0   2023-11-17 15:31:50.351708  \n",
+       "1   2023-11-17 15:31:50.351708  \n",
+       "2   2023-11-17 15:31:50.351708  \n",
+       "3   2023-11-17 15:31:50.351708  \n",
+       "..                         ...  \n",
+       "50  2023-11-21 10:43:31.249268  \n",
+       "51  2023-11-21 10:43:31.249268  \n",
+       "52  2023-11-21 10:43:31.250268  \n",
+       "53  2023-11-21 10:43:31.250268  \n",
+       "\n",
+       "[54 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df1 = pd.read_csv(r\"E:\\data_analysis_python\\cinetel\\cinetel_.csv\")"
+    "df1 = pd.read_csv(r\"E:\\data_analysis_python\\cinetel\\cinetel_.csv\")\n",
+    "pd.set_option('display.max_rows', 8)\n",
+    "df1"
    ]
   },
   {
@@ -52,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -401,13 +612,12 @@
        "[50 rows x 11 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.set_option('display.max_rows', 8)\n",
     "df1"
    ]
   },
@@ -427,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
