--- a/cinetel/cinetelcleaning.ipynb
+++ b/cinetel/cinetelcleaning.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -117,132 +117,60 @@
        "      <td>2023-11-17 15:31:50.351708</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50</th>\n",
-       "      <td>7</td>\n",
-       "      <td>COMANDANTE</td>\n",
-       "      <td>'2023-10-31'31/10/2023</td>\n",
-       "      <td>ITA</td>\n",
-       "      <td>01 DISTRIBUTION</td>\n",
-       "      <td>19637.37</td>\n",
-       "      <td>3455</td>\n",
-       "      <td>3252914.25</td>\n",
-       "      <td>477655</td>\n",
-       "      <td>2023-11-21 10:43:31.249268</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>51</th>\n",
-       "      <td>8</td>\n",
-       "      <td>IO CAPITANO</td>\n",
-       "      <td>'2023-09-07'07/09/2023</td>\n",
-       "      <td>COP</td>\n",
-       "      <td>01 DISTRIBUTION</td>\n",
-       "      <td>14251.70</td>\n",
-       "      <td>3374</td>\n",
-       "      <td>4189929.12</td>\n",
-       "      <td>726793</td>\n",
-       "      <td>2023-11-21 10:43:31.249268</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>52</th>\n",
-       "      <td>9</td>\n",
-       "      <td>TROLLS 3 - TUTTI INSIEME (TROLLS BAND TOGETHER)</td>\n",
-       "      <td>'2023-11-09'09/11/2023</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>UNIVERSAL S.R.L.</td>\n",
-       "      <td>13974.40</td>\n",
-       "      <td>2376</td>\n",
-       "      <td>1834876.28</td>\n",
-       "      <td>270536</td>\n",
-       "      <td>2023-11-21 10:43:31.250268</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>53</th>\n",
-       "      <td>10</td>\n",
-       "      <td>DREAM SCENARIO - HAI MAI SOGNATO QUEST'UOMO?</td>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>THE OLD OAK</td>\n",
        "      <td>'2023-11-16'16/11/2023</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>I WONDER PICTURES S.R.L.</td>\n",
-       "      <td>12969.19</td>\n",
-       "      <td>2175</td>\n",
-       "      <td>136938.61</td>\n",
-       "      <td>19876</td>\n",
-       "      <td>2023-11-21 10:43:31.250268</td>\n",
+       "      <td>FRA</td>\n",
+       "      <td>LUCKY RED DISTRIB.</td>\n",
+       "      <td>36605.89</td>\n",
+       "      <td>5879</td>\n",
+       "      <td>56540.79</td>\n",
+       "      <td>8609</td>\n",
+       "      <td>2023-11-17 15:31:50.351708</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>54 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Pos.                                             Titolo  \\\n",
-       "0     1                                 C'E' ANCORA DOMANI   \n",
-       "1     2  HUNGER GAMES - LA BALLATA DELL'USIGNOLO E DEL ...   \n",
-       "2     3                                        THE MARVELS   \n",
-       "3     4                                       THANKSGIVING   \n",
-       "..  ...                                                ...   \n",
-       "50    7                                         COMANDANTE   \n",
-       "51    8                                        IO CAPITANO   \n",
-       "52    9    TROLLS 3 - TUTTI INSIEME (TROLLS BAND TOGETHER)   \n",
-       "53   10       DREAM SCENARIO - HAI MAI SOGNATO QUEST'UOMO?   \n",
+       "  Pos.                                             Titolo  \\\n",
+       "0    1                                 C'E' ANCORA DOMANI   \n",
+       "1    2  HUNGER GAMES - LA BALLATA DELL'USIGNOLO E DEL ...   \n",
+       "2    3                                        THE MARVELS   \n",
+       "3    4                                       THANKSGIVING   \n",
+       "4    5                                        THE OLD OAK   \n",
        "\n",
-       "              Prima Progr. Nazione              Distribuzione    Incasso  \\\n",
-       "0   '2023-10-26'26/10/2023     ITA        VISION DISTRIBUTION  449991.06   \n",
-       "1   '2023-11-15'15/11/2023     USA         MEDUSA FILM S.P.A.  238466.31   \n",
-       "2   '2023-11-08'08/11/2023     USA  WALT DISNEY S.M.P. ITALIA   60914.35   \n",
-       "3   '2023-11-16'16/11/2023     USA      EAGLE PICTURES S.P.A.   41232.57   \n",
-       "..                     ...     ...                        ...        ...   \n",
-       "50  '2023-10-31'31/10/2023     ITA            01 DISTRIBUTION   19637.37   \n",
-       "51  '2023-09-07'07/09/2023     COP            01 DISTRIBUTION   14251.70   \n",
-       "52  '2023-11-09'09/11/2023     USA           UNIVERSAL S.R.L.   13974.40   \n",
-       "53  '2023-11-16'16/11/2023     USA   I WONDER PICTURES S.R.L.   12969.19   \n",
+       "             Prima Progr. Nazione              Distribuzione    Incasso  \\\n",
+       "0  '2023-10-26'26/10/2023     ITA        VISION DISTRIBUTION  449991.06   \n",
+       "1  '2023-11-15'15/11/2023     USA         MEDUSA FILM S.P.A.  238466.31   \n",
+       "2  '2023-11-08'08/11/2023     USA  WALT DISNEY S.M.P. ITALIA   60914.35   \n",
+       "3  '2023-11-16'16/11/2023     USA      EAGLE PICTURES S.P.A.   41232.57   \n",
+       "4  '2023-11-16'16/11/2023     FRA         LUCKY RED DISTRIB.   36605.89   \n",
        "\n",
-       "   Presenze Incasso al 16/11/2023 Presenze al 16/11/2023  \\\n",
-       "0     66700           15231636.85                2202169   \n",
-       "1     32469             584902.45                  79311   \n",
-       "2      8628            2260142.44                 305291   \n",
-       "3      5709              41232.57                   5709   \n",
-       "..      ...                   ...                    ...   \n",
-       "50     3455            3252914.25                 477655   \n",
-       "51     3374            4189929.12                 726793   \n",
-       "52     2376            1834876.28                 270536   \n",
-       "53     2175             136938.61                  19876   \n",
+       "  Presenze Incasso al 16/11/2023 Presenze al 16/11/2023  \\\n",
+       "0    66700           15231636.85                2202169   \n",
+       "1    32469             584902.45                  79311   \n",
+       "2     8628            2260142.44                 305291   \n",
+       "3     5709              41232.57                   5709   \n",
+       "4     5879              56540.79                   8609   \n",
        "\n",
-       "    2023-11-17 15:31:50.351708  \n",
-       "0   2023-11-17 15:31:50.351708  \n",
-       "1   2023-11-17 15:31:50.351708  \n",
-       "2   2023-11-17 15:31:50.351708  \n",
-       "3   2023-11-17 15:31:50.351708  \n",
-       "..                         ...  \n",
-       "50  2023-11-21 10:43:31.249268  \n",
-       "51  2023-11-21 10:43:31.249268  \n",
-       "52  2023-11-21 10:43:31.250268  \n",
-       "53  2023-11-21 10:43:31.250268  \n",
-       "\n",
-       "[54 rows x 10 columns]"
+       "   2023-11-17 15:31:50.351708  \n",
+       "0  2023-11-17 15:31:50.351708  \n",
+       "1  2023-11-17 15:31:50.351708  \n",
+       "2  2023-11-17 15:31:50.351708  \n",
+       "3  2023-11-17 15:31:50.351708  \n",
+       "4  2023-11-17 15:31:50.351708  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df1 = pd.read_csv(r\"E:\\data_analysis_python\\cinetel\\cinetel_.csv\")\n",
-    "pd.set_option('display.max_rows', 8)\n",
-    "df1"
+    "df1.head()"
    ]
   },
   {
@@ -263,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -612,12 +540,13 @@
        "[50 rows x 11 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "pd.set_option('display.max_rows', 8)\n",
     "df1"
    ]
   },
@@ -637,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
