--- a/cinetel/cinetelcleaning.ipynb
+++ b/cinetel/cinetelcleaning.ipynb
@@ -257,7 +257,7 @@
     "df1['date_pulled'] = pd.to_datetime(df1['date_pulled'])\n",
     "df1['date_pulled'] = pd.to_datetime(df1['date_pulled']).dt.date\n",
     "\n",
-    "#extra tries I didi before:\n",
+    "#extra tries:\n",
     "#df1['date_pulled'] = df1['date_pulled'].str[:10]\n",
     "#df1['date_pulled'] = df1['date_pulled'].str.replace('[^a-zA-Z0-9]', '', regex = True)\n",
     "#df1['date_pulled'] = df1['date_pulled'].apply(lambda x: str(x))\n",
