--- a/cinetel/cinetelcleaning.ipynb
+++ b/cinetel/cinetelcleaning.ipynb
@@ -566,13 +566,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import numpy as np\n",
-    "# import matplotlib.pyplot as plt"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
