--- a/cinetel/cinetelcleaning.ipynb
+++ b/cinetel/cinetelcleaning.ipynb
@@ -558,28 +558,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Visualizations"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "# import numpy as np\n",
+    "# import matplotlib.pyplot as plt"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
