--- a/cinetel/cinetelcleaning.ipynb
+++ b/cinetel/cinetelcleaning.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Cinetel Data Cleaning\n",
     "\n",
-    "Cinetel data scraped daily from their online boxoffice at this [link](https://www.cinetel.it/pages/boxoffice.php?edperiodo=aWVyaQ==)."
+    "Cinetel data scraped daily from their boxoffice published everyday at this [link](https://www.cinetel.it/pages/boxoffice.php?edperiodo=aWVyaQ==)."
    ]
   },
   {
